// Copyright 2013-2018 The NATS Authors
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Uses https://github.com/gogo/protobuf
// compiled via `protoc -I=. -I=$GOPATH/src --gofast_out=. protocol.proto`

syntax = "proto3";
package pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

// VoteRequest
message VoteRequest {
  uint64 Term         = 1; // Term for the candidate.
  string Candidate    = 2; // The candidate for the election.
  bytes  CurrentState = 3; // Candidate's opaque position in the state machine.
}

// VoteResponse
message VoteResponse {
  uint64 Term      = 1; // The responder's term.
  bool   Granted   = 2; // Vote's status
}

// Heartbeat
message Heartbeat {
  uint64 Term     = 1; // Leader's current term.
  string Leader   = 2; // Leaders id.
  uint64 NodeSize = 3; // The number of nodes that the raft should be
}
